--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(sampling_parallel)
 importFrom(parallel,mclapply)
 importFrom(reshape2,melt)
 importFrom(rstan,extract)
+importFrom(rstan,sampling)
 importFrom(rstan,sflist2stanfit)
 importFrom(rstan,stan)
